# zapcode

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  install.sh  justfile  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/baldrick-core/: Cargo.toml
crates/baldrick-core/benches/: execution.rs
crates/baldrick-core/src/: error.rs  lib.rs  sandbox.rs  snapshot.rs  value.rs
crates/baldrick-core/src/compiler/: instruction.rs  mod.rs
crates/baldrick-core/src/parser/: ir.rs  mod.rs
crates/baldrick-core/src/vm/: builtins.rs  mod.rs
crates/baldrick-core/tests/: basic.rs  builtins.rs  control_flow.rs  error_handling.rs  functions.rs  integration.rs  objects_arrays.rs  sandbox.rs  security.rs  variables.rs
crates/zapcode-core/: Cargo.toml
crates/zapcode-core/benches/: execution.rs
crates/zapcode-core/examples/: test262.rs
crates/zapcode-core/src/: lib.rs  snapshot.rs  trace.rs  value.rs
crates/zapcode-core/src/compiler/: instruction.rs  mod.rs
crates/zapcode-core/src/parser/: mod.rs
crates/zapcode-core/src/vm/: builtins.rs  mod.rs
crates/zapcode-core/tests/: async_await.rs  builtins.rs  classes.rs  control_flow.rs  error_handling.rs  functions.rs  objects_arrays.rs  security.rs  snapshot.rs  trace.rs
crates/zapcode-js/: Cargo.toml  package.json
crates/zapcode-js/src/: lib.rs
crates/zapcode-py/: Cargo.toml  pyproject.toml
crates/zapcode-py/src/: lib.rs
crates/zapcode-wasm/: Cargo.toml
crates/zapcode-wasm/src/: lib.rs
examples/: README.md
examples/ai-bedrock/: README.md  main.py  main.ts  package.json
examples/python/: README.md  ai_agent_anthropic.py  basic.py  pyproject.toml
examples/python/ai-agent/: README.md  ai_agent_anthropic.py  ai_agent_zapcode_ai.py  pyproject.toml
examples/python/ai-bedrock/: README.md  pyproject.toml
examples/python/basic/: README.md  main.py  pyproject.toml
examples/python/debug-tracing/: README.md  main.py  pyproject.toml
examples/rust/: Cargo.toml  README.md  basic.rs
examples/rust/basic/: Cargo.toml  README.md  basic.rs
examples/typescript/: README.md  ai-agent-anthropic.ts  ai-agent-vercel-ai.ts  basic.ts  package.json
examples/typescript/ai-agent/: README.md  ai-agent-anthropic.ts  ai-agent-vercel-ai.ts  ai-agent-zapcode-ai.ts  package.json
examples/typescript/ai-bedrock/: README.md  package.json
examples/typescript/basic/: README.md  main.ts  package.json
examples/typescript/debug-tracing/: README.md  main.ts  package.json
examples/wasm/: index.html
examples/wasm/basic/: index.html
scripts/: dev-setup.sh
