[workspace]
members = [
    "crates/zapcode-core",
    "crates/zapcode-js",
    "crates/zapcode-py",
    "crates/zapcode-wasm",
]
exclude = [
    "examples/rust",
]
resolver = "2"

[workspace.package]
version = "1.0.0-beta.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/TheUncharted/zapcode"

[workspace.dependencies]
# Parser
oxc_parser = "0.117.0"
oxc_ast = "0.117.0"
oxc_allocator = "0.117.0"
oxc_span = "0.117.0"
oxc_syntax = "0.117.0"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
postcard = { version = "1.1.3", features = ["alloc"] }

# Data structures
indexmap = { version = "2.13.0", features = ["serde"] }

# Error handling
thiserror = "2.0.18"

# Testing
insta = { version = "1.46.3", features = ["yaml"] }

# Benchmarking
divan = "0.1.21"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
