[package]
name = "zapcode-js"
version = "1.5.2" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for the Zapcode TypeScript interpreter"

[lib]
crate-type = ["cdylib"]

[dependencies]
zapcode-core = { path = "../zapcode-core" }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
