[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zapcode"
version = "0.1.0"
description = "Python bindings for the Zapcode TypeScript interpreter"
requires-python = ">=3.10"
license = "MIT"
keywords = ["typescript", "interpreter", "sandbox", "ai", "mcp"]

[project.urls]
Repository = "https://github.com/TheUncharted/zapcode"

[tool.maturin]
features = ["pyo3/extension-module"]
