[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zapcode"
version = "1.1.4" # x-release-please-version
description = "A minimal, secure TypeScript interpreter for AI agents — Python bindings"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "Uncharted"}]
keywords = ["typescript", "interpreter", "sandbox", "ai", "mcp", "snapshot", "secure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/TheUncharted/zapcode"
Repository = "https://github.com/TheUncharted/zapcode"
Issues = "https://github.com/TheUncharted/zapcode/issues"
Documentation = "https://github.com/TheUncharted/zapcode#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
